5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4362/executions/1596_2894.log
== TEST (2019-04-02 16:25:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo 1* 8+valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total=valor_do_jogo 1* 8+valor_do_frete
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo 1* 8+valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total=valor_do_jogo 1* 8+valor_do_frete
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo 1* 8+valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total=valor_do_jogo 1* 8+valor_do_frete
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo 1*8+valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total=valor_do_jogo 1*8+valor_do_frete
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8+valor_do_frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8+valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.210069
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1 = float(input("Qual o valor unitario do jogo? "))

valor_do_frete=45
# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8+valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.177445
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
